# zn-perf

./: .envrc  .gitignore  Cargo.toml  README.md
_toybox/: generate-report  parquet-page-sizes-uncompressed  reports-to-csv
benches/: it.rs
data/: k8slog1-lz4.parquet  k8slog1-zstd.parquet
src/: arrow.rs  datafusion.rs  error.rs  file.rs  lib.rs  main.rs  metadata.rs
