[package]
name = "zn-perf"
version = "0.1.0"
edition = "2021"
description = "Performance experiments for the Zinc Labs' log search engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "30.0"
arrow-schema = "30.0"
bytes = "1.3"
clap = { version = "4.0", features = ["derive"] }
memchr = "2.5"
parquet = { version = "30.0", features = ["json"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
once_cell = "1.17"

[[bench]]
name = "it"
harness = false
