[package]
name = "zn-perf"
version = "0.1.0"
edition = "2021"
description = "Performance experiments for the Zinc Labs' log search engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3"
clap = { version = "4.1", features = ["derive"] }
arrow = { version = "31.0", features = ["simd", "ipc_compression"] }
arrow-schema = { version = "31.0", features = ["serde"] }
arrow-array = "31.0"
parquet = { version = "31.0", features = ["arrow", "async", "json"] }
datafusion = { version = "17.0", features = ["simd"] }
memchr = "2.5"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
futures = "0.3"
itertools = "0.10"
tokio = { version = "1.24", features = ["rt-multi-thread"] }

[[bench]]
name = "it"
harness = false
